<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:layout_width="550dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501">

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:ems="10"
            android:hint="@string/introdu_o_parola_noua"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPasswordRepeatedEditText"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:ems="10"
            android:hint="@string/reintrodu_parola_noua"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirmPasswordChangeButton"
                android:layout_width="150dp"
                android:layout_height="60dp"

                android:text="@string/confirm" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/inapoiLaLoginBtn"
        android:layout_width="158dp"
        android:layout_height="75dp"
        android:text="@string/inapoi_la_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />
</androidx.constraintlayout.widget.ConstraintLayout>