<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="496dp"
        android:layout_height="459dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4" />

        <EditText
            android:id="@+id/numeDeUtilizatorEditText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:hint="@string/nume_de_utilizator"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/parolaEditText"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:ems="10"
            android:hint="@string/parola"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/loginTextView" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>