<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clientRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        tools:listitem="@layout/client_view_holder" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="432dp"
            android:layout_height="216dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/cautaDupaPrenumeSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cauata_dupa_prenume" />

                <EditText
                    android:id="@+id/cautaDupaPreNumeClientButton"
                    android:layout_width="244dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/cauata_dupa_prenume"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/cautaDupaNumeClientSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cauta_dupa_nume" />

                <EditText
                    android:id="@+id/cautaDupaNumeClientButton"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/cauta_dupa_nume"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="185dp"
            android:layout_height="97dp"
            android:layout_marginEnd="176dp"
            android:layout_marginRight="176dp"
            android:text="@string/adauga_un_client_nou"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.433" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>